--- a/style.css
+++ b/style.css
@@ -47,6 +47,98 @@ header {
 /* carousel start */
 .slider {
   display: none;
+  width: 100vw;
+  height: 700px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.slides {
+  width: 500%;
+  height: 100%;
+  display: flex;
+}
+.slides input {
+  display: none;
+}
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+.slide img {
+  width: 100%;
+  height: 100%;
+}
+
+/* css for manual slide */
+.navigation-manual {
+  position: absolute;
+  width: 100%;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #40d3dc;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background-color: #40d3dc;
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0;
+}
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+#radio3:checked ~ .first {
+  margin-left: -40%;
+}
+#radio4:checked ~ .first {
+  margin-left: -60%;
+}
+
+/* css for auto slide */
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 660px;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+.navigation-auto div {
+  border: 2px solid #40d3dc;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background-color: #40d3dc;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+  background-color: #40d3dc;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+  background-color: #40d3dc;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+  background-color: #40d3dc;
 }
 /* carousel end */
 
@@ -469,7 +561,7 @@ h3 {
   /* carousel start */
   .slider {
     display: initial;
-    width: 100vw;
+    width: 100%;
     height: 700px;
     overflow: hidden;
     position: absolute;
