--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@ h3 {
     border-bottom: 1px solid white;
     border-radius: 0;
     align-items: center;
-    margin: 0;
+    margin: 0 0 30% 0 ;
     width: 100%;
     height: 15vh;
     font-size: 80px;
@@ -824,4 +824,3 @@ h3 {
     color: white;
     cursor: auto;
   }
-}
